--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = "=0.9.17"
-serde = "1.0.99"
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+serde = { version = "1.0.152",  features = ["derive"] }
