--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mailgun-rs"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["Dongri Jin <dongrify@gmail.com>"]
 description = "An unofficial client library for the Mailgun API"
 edition = "2018"
@@ -15,3 +15,4 @@ readme = "README.md"
 [dependencies]
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = { version = "1.0.152",  features = ["derive"] }
+serde_json = "1.0.91"
