--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ readme = "README.md"
 reqwest = { version = "0.11.18", features = ["json", "blocking"] }
 serde = { version = "1.0.152",  features = ["derive"] }
 serde_json = "1.0.91"
+typed-builder = "0.15.2"
