--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mailgun-rs"
-version = "0.1.10"
-authors = ["Dongri Jin <dongrify@gmail.com>"]
+version = "0.1.11"
+authors = ["Dongri Jin <dongrium@gmail.com>"]
 description = "An unofficial client library for the Mailgun API"
 edition = "2018"
 repository = "https://github.com/dongri/mailgun-rs"
