--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ reqwest = { version = "0.12", features = [
     "macos-system-configuration",
     "json",
     "blocking",
+    "multipart",
+    "stream",
 ], default-features = false }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
