--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ reqwest = { version = "0.12", features = [
 ], default-features = false }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
+thiserror = "2.0.12"
 typed-builder = "0.15.2"
 
 [features]
