--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,21 +13,20 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.12", features = [
+reqwest = { version = "0.13", features = [
     "charset",
-    "rustls-tls",
     "http2",
-    "macos-system-configuration",
     "json",
     "blocking",
     "multipart",
     "stream",
 ], default-features = false }
-serde = { version = "1.0.152", features = ["derive"] }
-serde_json = "1.0.91"
-thiserror = "2.0.12"
-typed-builder = "0.15.2"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
+thiserror = "2.0.18"
+typed-builder = "0.23.2"
 
 [features]
 default = []
-rustls-tls = ["reqwest/rustls-tls"]
+rustls-tls = ["reqwest/rustls"]
+native-tls = ["reqwest/native-tls"]
